# borgia

./: .gitignore  BorgiaVerification.lean  Cargo.toml  DEPLOYMENT.md  Dockerfile  Gemfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  _config.yml  api-reference.md  docker-compose.yml  env.example  implementation.md  index.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
_includes/: head.html
demos/: README.md  REAL_VALIDATION_README.md  charts.py  molecular_cheminformatics.py  network_time_series.py  requirements.txt  run_borgia_demo.py  setup.py  statistical_analysis.py  time_series.py  validate_borgia.py  validate_real_borgia.py  visualization_requirements.txt  visualize_real_borgia_results.py
docs/: Gemfile  _config.yml  bene-gesserit.md  buhera-molecular-foundry.md  buhera-vpos-coolant-processors.md  convergence-algorithm.md  examples.md  recursive-temporal-precision.md  search-algorithm.md  st-stellas-framework.tex  structure.md  theoretical-foundations.md  turbulance-revolution.md  virtual-processing-acceleration.md
examples/: advanced_bmd_turbulance_demo.rs  bmd_networks_demo.rs  buhera_vpos_coolant_processor_demo.rs  distributed_molecular_intelligence.rs  hardware_clock_oscillatory_analysis.rs  hardware_lights_cheminformatics.rs  quantum_oscillatory_analysis.rs  turbulance_compiler_demo.rs
gonfanolier/: FINAL_VISUALIZATION_COMPLETION_STATUS.md  FUNCTION_USAGE_ANALYSIS.md  INSTALLATION_NOTES.md  MANIFEST.in  README.md  README_VALIDATION.md  SCIENTIFIC_VISUALIZATION_COMPLETION.md  VISUALIZATION_IMPLEMENTATION_STATUS.md  __init__.py  generate_scientific_visualizations.py  pyproject.toml  requirements.txt  run_all_validations.py  scientific_visualisations-template.md  setup.py  test_installation.py  verify_complete_pipeline.py  viz_bmd_equivalence.py  viz_information_density.py  viz_s_entropy_coordinates.py  viz_spectroscopy_cv.py
gonfanolier/docs/instrument-derivation/: instrument-derivation.aux  instrument-derivation.blg  instrument-derivation.tex  instrument-derivation.toc
gonfanolier/docs/virtual-instrument-arpetures/: categorical-arpeture-virtual-spectrometer.tex
gonfanolier/docs/virtual-instrument-arpetures/sections/: instrument-necessity.tex  principles-of-catalysis.tex
gonfanolier/public/agrafiotis-smarts-tar/: agrafiotis-smarts-tar
gonfanolier/public/ahmed-smarts-tar/: ahmed-smarts-tar
gonfanolier/public/daylight-smarts-tar/: daylight-smarts-tar
gonfanolier/public/hann-smarts-tar/: hann-smarts-tar
gonfanolier/public/walters-smarts-tar/: walters-smarts-tar  walters.smarts
gonfanolier/results/: bmd_equivalence_results.json  bmd_equivalence_summary.csv  compression_results.json  consciousness_pharmaceutical_coupling_20251004_100824.json  cv_analysis_results.json  dual_functionality_results.json  dynamic_database_results.json  hardware_sync_results.json  information_catalysis_results.json  informational_pharmaceutics_validation_20251004_100909.json  noise_enhancement_results.json  oscillatory_architecture_results.json  pixel_chemical_results.json  placebo_equivalent_pathway_analysis_20251004_101837.json  reaction_prediction_results.json  s_entropy_results.json  spectral_analysis_results.json  statistical_analysis_results.json  strategic_optimization_results.json  therapeutic_coordinate_navigation_20251004_101043.json  unified_bioactive_framework_20251004_100652.json  unified_oscillatory_temporal_framework_20251006_015246.json
gonfanolier/results/information_catalysis/: information_catalysis_results.json
gonfanolier/results/partition_synthesizer/: synthesizer_results.json
gonfanolier/results/validation_suite/: statistical_analysis_results.json
gonfanolier/src/hierarchy/: __init__.py  empty_dictionary.py  molecular_hierarchy.py  s_entropy_coordinate_transform.py  semantic_amplification.py
gonfanolier/src/hierarchy/gonfanolier/results/hierarchy/: empty_dictionary_results.json  s_entropy_coordinate_results.json  semantic_amplification_results.json
gonfanolier/src/information/: chemical_reaction_prediction.py  compression_information_retention.py  dynamic_information_database.py  meta_information_extraction.py  molecular_representation_information_density.py  situational_utility_analysis.py
gonfanolier/src/oscillatory/: bmd_equivalence.py  dual_functionality.py  information_catalysis.py  oscilatory_molecular_architecture.py  st_stellas_entropy_coordinates.py  strategic_optimization.py
gonfanolier/src/pharmaceutics/: bont_lps_conjugate_analysis.py  consciousness_pharmaceutical_coupling.py  environmental_drug_enhancement.py  informational_pharmaceutics_framework.py  placebo_amplification_analysis.py  placebo_equivalent_pathway_analysis.py  therapeutic_coordinate_navigation.py  unified_bioactive_molecular_framework.py
gonfanolier/src/spectroscopy/: computer_vision_chemical_analysis.py  hardware_clock_synchronization.py  information_catalysis_validation.py  instrument_visualizations.py  led_spectroscopy.py  molecule_to_drip.py  molecule_to_drip_simple.py  noise_enhanced_processing.py  partition_coordinate_synthesizer.py  partition_coordinate_validation.py  pixel_chemical_modification.py  rgb_chemical_mapping.py  run_validation_suite.py  spectral_analysis_algorithm.py  statistics.py
gonfanolier/src/temporal/: oscillatory_gear_networks.py  unified_oscillatory_temporal_framework.py
honjo-masamune/: package-lock.json  package.json  tailwind.config.js  vercel.json  website.md
honjo-masamune/honjo-rs/: Cargo.toml
honjo-masamune/honjo-rs/examples/: salt.hj  track.hj  water.hj
honjo-masamune/honjo-rs/src/: ast.rs  interp.rs  lexer.rs  lib.rs  main.rs  parser.rs  stdlib.rs  types.rs
honjo-masamune/honjo-rs/tests/: language.rs
publication/: abstract.tex  cheminformatics-engine.aux  cheminformatics-engine.blg  cheminformatics-engine.out  cheminformatics-engine.tex  cheminformatics-engine.toc  discussion.tex  dual-functionality.tex  experimental-validation.tex  figures.tex  hardware-integration.tex  information-catalysis.tex  introduction.tex  lean-code.tex  molecular-architecture-networks.tex  results.tex  (+2 more)
(+548 files in other folders)
