[package]
name = "borgia"
version = "0.1.0"
edition = "2021"
description = "Revolutionary Probabilistic Cheminformatics Engine"
authors = ["Kundai Farai Sachikonye"]
license = "MIT"
repository = "https://github.com/fullscreen-triangle/borgia"
homepage = "https://github.com/fullscreen-triangle/borgia"
documentation = "https://docs.rs/borgia"
keywords = ["cheminformatics", "probabilistic", "fuzzy-logic", "molecular", "bayesian"]
categories = ["science", "algorithms", "data-structures"]
readme = "README.md"

[lib]
name = "borgia"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "borgia"
path = "src/main.rs"

[dependencies]
# Core probabilistic computing
nalgebra = "0.32"
ndarray = "0.15"
numpy = "0.21"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.16"

# Fuzzy logic and uncertainty
fuzzy-logic = "0.2"
uncertainty = "0.2"

# Graph algorithms and molecular representations
petgraph = "0.6"
graph = "0.7"
indexmap = "2.0"

# Chemistry and molecular data structures
chemfiles = "0.10"
rdkit-sys = { version = "0.7", optional = true }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Mathematical operations
num = "0.4"
num-complex = "0.4"
num-traits = "0.2"
approx = "0.5"
uuid = { version = "1.0", features = ["v4"] }

# Performance and optimization
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"

# Async and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.6"
tower = "0.4"

# Logging and error handling
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Python integration
pyo3 = { version = "0.19", features = ["extension-module"] }
pythonize = "0.19"

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
toml = "0.8"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"] }
rocksdb = "0.21"

# Memory management and optimization
mimalloc = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
quickcheck = "1.0"
tokio-test = "0.4"

[features]
default = ["probabilistic", "fuzzy-logic", "molecular"]
probabilistic = []
fuzzy-logic = []
molecular = ["rdkit-sys"]
gpu-acceleration = []
python-bindings = ["pyo3"]
advanced-algorithms = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bench]]
name = "molecular_similarity"
harness = false

[[bench]]
name = "probabilistic_algorithms"
harness = false

[[bench]]
name = "fuzzy_logic_performance"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
