[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gonfanolier"
version = "1.0.0"
authors = [
    {name = "Borgia Framework Team", email = "team@borgia.dev"},
]
description = "Comprehensive Validation Framework for Fuzzy Molecular Representations and S-Entropy Coordinates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry", 
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "cheminformatics", 
    "molecular-computing", 
    "fuzzy-representations",
    "s-entropy",
    "oscillatory-mechanics", 
    "validation",
    "scientific-visualization"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0", 
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=22.0", 
    "flake8>=4.0",
    "mypy>=0.950",
    "pre-commit>=2.15",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinxcontrib-napoleon>=0.7", 
]
viz = [
    "plotly>=5.0",
    "bokeh>=2.4",
    "dash>=2.0", 
    "streamlit>=1.0",
]
full = [
    "rdkit>=2022.3.1"
]

[project.urls]
homepage = "https://github.com/borgia-framework/gonfanolier"
documentation = "https://gonfanolier.readthedocs.io/"
repository = "https://github.com/borgia-framework/gonfanolier" 
changelog = "https://github.com/borgia-framework/gonfanolier/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/borgia-framework/gonfanolier/issues"

[project.scripts]
gonfanolier-validate = "gonfanolier.run_all_validations:main"
gonfanolier-viz = "gonfanolier.generate_scientific_visualizations:main"

[tool.setuptools]
packages = ["gonfanolier", "gonfanolier.src", "gonfanolier.src.information", "gonfanolier.src.oscillatory", "gonfanolier.src.spectroscopy"]
include-package-data = true

[tool.setuptools.package-data] 
gonfanolier = [
    "public/agrafiotis-smarts-tar/*",
    "public/ahmed-smarts-tar/*",
    "public/daylight-smarts-tar/*", 
    "public/hann-smarts-tar/*",
    "public/walters-smarts-tar/*",
    "results/*",
    "src/*/*.py",
    "*.md",
    "*.txt"
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311'] 
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
